# kollekt-cplusplus

./: .gitignore  CMakeLists.txt  README.md  TODO  environ
src/: .main.cpp.swp  369925.csv  369926.csv  Actor.h  CMakeLists.txt  PerformanceCounter.h  cmake_install.cmake  inkollektor.cpp  main.cpp
